--- a/config/configuration.yml
+++ b/config/configuration.yml
@@ -13,6 +13,14 @@ default:
   # See the examples below and the Rails guide for more configuration options:
   # http://guides.rubyonrails.org/action_mailer_basics.html#action-mailer-configuration
   email_delivery:
+     delivery_method: :smtp
+     smtp_settings:
+       address: "smtp.mailgun.org"
+       port: 587
+       authentication: :plain
+       domain: "mg.cotribute.com"
+       user_name: "postmaster@mg.cotribute.com"
+       password: "843292f48b12b4d6bf2c219c7914f82b"
 
   # ==== Simple SMTP server at localhost
   #
@@ -212,6 +220,15 @@ default:
 # specific configuration options for production environment
 # that overrides the default ones
 production:
+  email_delivery:
+     delivery_method: :smtp
+     smtp_settings:
+       address: "smtp.mailgun.org"
+       port: 587
+       authentication: :plain
+       domain: "mg.cotribute.com"
+       user_name: "postmaster@mg.cotribute.com"
+       password: "843292f48b12b4d6bf2c219c7914f82b"
 
 # specific configuration options for development environment
 # that overrides the default ones
